more icon spacing, fixing global nav .dropdown to not allow "missing" the hover state

--- a/admin/assets/less/header.less
+++ b/admin/assets/less/header.less
@@ -30,6 +30,10 @@ header, #cPlugins {
 		text-shadow: 0 -1px 0 #000;
 		}
 	
+	.nav > li > .dropdown-menu {
+		margin-top: -1px;
+	}
+	
 	.nav > li li i {
 		font-size: 13px;
 	}
@@ -272,7 +276,7 @@ header, #cPlugins {
 		box-shadow: inset 0px 0px 12px rgba(0,0,0,.65);
 		
 		li a { /* Dropdown Items */
-			width: 130px;
+			/* width: 130px; */
 			box-shadow: 0px 0px 0 rgba(0, 0, 0, 0);
 			}
 		
@@ -324,6 +328,10 @@ header, #cPlugins {
 		 	width: 150px;
 		 	.text-overflow;
 		 	color: @white;
+		 	}
+		
+		.dropdown-menu {
+		 	width: 164px;
 		 	}
 		 	
 		.dropdown-menu  i {
